kubernetes-files/backend/demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-service
  namespace: default
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
