kubernetes-files/backend/demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-backend-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-apps
spec:
  ingressClassName: alb
  rules:
    - host: api-property.zodiai.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-backend-service
                port:
                  number: 3000
